Style.css
/* Universal */
body{
    background-color: #89CFF0;
    /*Remove the unwanted 8 pixel margin around the content*/
    margin: 0;
    padding-left: 1vw;
    padding-right: 1vw;

    

    /* Hide horizontal scrollbar */
    overflow-x: hidden;
}
#Sec1{
    width: 100%;
    height: 70%;
}
/*Control the navigation menu below the banner.
Make each slot high enough fith the content.
Center the links*/

#LinkMenu{
    margin: 0;
    font-size: 7em;
    width: 100%;
    height: fit-content;
}
.LinkSlot{
    width: 100%;
    height: 9vw;

    display: flex;
    justify-content: center;
    align-items: center;

}
#LinkSlot1{
    background-color: #ff0000;
}
#LinkSlot2{
    background-color: #ffc0cb;
}
#LinkSlot3{
    background-color: #008000;
}

/*Characters page*/
#CharacterList{
    margin-top: 30%;
}

